# gdt2sdb

./: .gitignore  README.md  pyproject.toml
scripts/: run_il2cpp_arm64.sh
src/gdt2r2sdb/: cli.py  core.py  loader.py  sanitizer.py  subset.py  verify.py
src/gdt2r2sdb/ghidra_scripts/: GdtToR2SdbText.java  HeaderToGdt.java  __init__.py
tests/: test_cli_static.py  test_integration_ghidra.py  test_loader.py  test_real_header_optional.py  test_regression_anonymous_union.py  test_regression_r2_ts_value_types.py  test_sanitizer.py  test_subset.py  test_verify.py
tests/fixtures/: mini_expected.sdb.txt  mini_il2cpp.h
